// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchTransformationPlanRequestsAction dispatches PENDING and FULFILLED actions 1`] = `
Array [
  Object {
    "type": "FETCH_V2V_TRANSFORMATION_PLAN_REQUESTS_PENDING",
  },
  Object {
    "payload": Object {
      "config": Object {
        "adapter": null,
        "data": undefined,
        "headers": Object {
          "Accept": "application/json, text/plain, */*",
          "X-Auth-Token": "",
          "X-Requested-With": "XMLHttpRequest",
        },
        "maxContentLength": -1,
        "method": "get",
        "params": Object {},
        "timeout": 0,
        "transformRequest": Object {
          "0": [Function],
        },
        "transformResponse": Object {
          "0": [Function],
        },
        "url": "/api/dummyPlanRequests",
        "validateStatus": [Function],
        "xsrfCookieName": "XSRF-TOKEN",
        "xsrfHeaderName": "X-XSRF-TOKEN",
      },
      "data": null,
      "headers": undefined,
      "status": 200,
    },
    "type": "FETCH_V2V_TRANSFORMATION_PLAN_REQUESTS_FULFILLED",
  },
]
`;

exports[`fetchTransformationPlanRequestsAction dispatches PENDING and REJECTED actions 1`] = `
Array [
  Object {
    "type": "FETCH_V2V_TRANSFORMATION_PLAN_REQUESTS_PENDING",
  },
  Object {
    "error": true,
    "payload": [Error: Request failed with status code 404],
    "type": "FETCH_V2V_TRANSFORMATION_PLAN_REQUESTS_REJECTED",
  },
]
`;

exports[`fetchTransformationPlansAction dispatches PENDING and FULFILLED actions 1`] = `
Array [
  Object {
    "type": "FETCH_V2V_TRANSFORMATION_PLANS_PENDING",
  },
  Object {
    "payload": Object {
      "config": Object {
        "adapter": null,
        "data": undefined,
        "headers": Object {
          "Accept": "application/json, text/plain, */*",
          "X-Auth-Token": "",
          "X-Requested-With": "XMLHttpRequest",
        },
        "maxContentLength": -1,
        "method": "get",
        "params": Object {},
        "timeout": 0,
        "transformRequest": Object {
          "0": [Function],
        },
        "transformResponse": Object {
          "0": [Function],
        },
        "url": "/api/dummyTransformationPlans",
        "validateStatus": [Function],
        "xsrfCookieName": "XSRF-TOKEN",
        "xsrfHeaderName": "X-XSRF-TOKEN",
      },
      "data": null,
      "headers": undefined,
      "status": 200,
    },
    "type": "FETCH_V2V_TRANSFORMATION_PLANS_FULFILLED",
  },
]
`;

exports[`fetchTransformationPlansAction dispatches PENDING and REJECTED actions 1`] = `
Array [
  Object {
    "type": "FETCH_V2V_TRANSFORMATION_PLANS_PENDING",
  },
  Object {
    "error": true,
    "payload": [Error: Request failed with status code 404],
    "type": "FETCH_V2V_TRANSFORMATION_PLANS_REJECTED",
  },
]
`;
